# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: .CMakeLists.txt.swp  CMakeLists.txt
Core/include/: Component.h  Engine.h  GUI.h  GameObject.h  Globals.h  HTime.h  Input.h  Material.h  Mesh.h  MyComponent.h  Quaternion.h  Scene.h  Shader.h  Singleton.h  Texture.h  Transform.h  Vector3.h
Core/include/InternalComponents/: BoxCollider.h  Camera.h  Collider.h  Exceptions.h  LightSource.h  MeshRenderer.h  PlaneCollider.h  Rigidbody.h  TestComponent.h
Core/include/Utilities/: Event.h  FileReader.h  KeyCode.h  MeshFactory.h  ObjectLoader.h  Singleton.h  TextureLoader.h  Window.h
Core/shaders/: fragment.glsl  fragmentLight.glsl  vertexLight.glsl
Core/src/: Component.cpp  Engine.cpp  GUI.cpp  GameObject.cpp  HTime.cpp  Input.cpp  Main.cpp  Mesh.cpp  MyComponent.cpp  NetworkClient.cpp  Quaternion.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Vector3.cpp
Core/src/InternalComponents/: BoxCollider.cpp  Camera.cpp  Collider.cpp  LightSource.cpp  MeshRenderer.cpp  PlaneCollider.cpp  Rigidbody.cpp  TestComponent.cpp
Core/src/Utilities/: FileReader.cpp  MeshFactory.cpp  ObjectLoader.cpp  TextureLoader.cpp  WindowWin32.cpp  WindowX11.cpp
Dependencies/GLAD/: glad.c
Dependencies/GLAD/glad/: glad.h
Networking/: CMakeLists.txt
Networking/include/: GameMessage.h  NetworkClient.h  NetworkColor.h  NetworkComponent.h  NetworkDelegate.h  NetworkTransform.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  olc_net.h
Networking/src/: NetworkClient.cpp  NetworkColor.cpp  NetworkComponent.cpp  NetworkDelegate.cpp  NetworkTransform.cpp
Server/: CMakeLists.txt
Server/src/: Server.cpp
